--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,16 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
+  <body>
 
-  <body class="container">
-    <%= yield %>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <%= render 'shared/nav' %>
+        <%= yield %>
+      </div>
+    </div>
+  </div>
+
   </body>
 </html>
