--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -3,10 +3,10 @@
 </div>
 
 <ul class="custom-nav nav nav-tabs">
-  <li class="nav-item">
+  <li class="<%= active?(root_path) %>">
     <%= link_to "Home", root_path %>
   </li>
-  <li class="nav-item">
+  <li class="<%= active?(posts_path) %>">
     <%= link_to "Time Entries", posts_path %>
   </li>
   <li class="dropdown pull-right">
