--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,8 +1,15 @@
 <%= form_for @post do |f| %>
 
-  <%= f.date_field :date %>
-  <%= f.text_area :rationale %>
+  <div class="form-group">
+    <%= f.label :date %>
+    <%= f.date_field :date, class: "form-control" %>
+  </div>
 
-  <%= f.submit 'Save' %>
+  <div class="form-group">
+    <%= f.label :rationale  %>
+    <%= f.text_area :rationale, class: "form-control" %>
+  </div>
+
+  <%= f.submit 'Save', class: "btn btn-primary btn-block" %>
 
 <% end %>
