Integrated growl notifications for active record validations

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,5 +19,7 @@
     </div>
   </div>
 
-  </body>
+<%= js add_gritter(flash[:notice], title: "Overtime App Notification", sticky: false) %>
+
+</body>
 </html>
