--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,12 +1,20 @@
 <%= form_for @post do |f| %>
 
+  <% if @post.errors.any? %>
+    <% @post.errors.full_messages.each do |error| %>
+      <%= js add_gritter(error, title: "Overtime App Notification", sticky: false) %>
+    <% end %>
+  <% end %>
+
+
+
   <div class="form-group">
-    <%= f.label :date %>
+    <%= f.label :date, class: "col-sm-12" %>
     <%= f.date_field :date, class: "form-control" %>
   </div>
 
   <div class="form-group">
-    <%= f.label :rationale  %>
+    <%= f.label :rationale, class: "col-sm-12" %>
     <%= f.text_area :rationale, class: "form-control" %>
   </div>
 
