--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -6,8 +6,6 @@
     <% end %>
   <% end %>
 
-
-
   <div class="form-group">
     <%= f.label :date, class: "col-sm-12" %>
     <%= f.date_field :date, class: "form-control" %>
@@ -16,6 +14,17 @@
   <div class="form-group">
     <%= f.label :rationale, class: "col-sm-12" %>
     <%= f.text_area :rationale, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.radio_button :status, 'submitted' %>
+    <%= f.label :status, 'Submitted' %>
+
+    <%= f.radio_button :status, 'approved' %>
+    <%= f.label :status, 'Approved' %>
+
+    <%= f.radio_button :status, 'rejected' %>
+    <%= f.label :status, 'Rejected' %>
   </div>
 
   <%= f.submit 'Save', class: "btn btn-primary btn-block" %>
