Update syntax for alerts

--- a/app/views/shared/_alerts.html.erb
+++ b/app/views/shared/_alerts.html.erb
@@ -2,6 +2,6 @@
   <%= js add_gritter(flash[:alert], title: "Overtime App Alert", sticky: false) %>
 <% elsif flash[:error] %>
   <%= js add_gritter(flash[:error], title: "Overtime App Erro", sticky: false) %>
-<% else flash[:notice] %>
+<% else %>
   <%= js add_gritter(flash[:notice], title: "Overtime App Notification", sticky: false) %>
 <% end %>
