--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -6,6 +6,11 @@
     <% end %>
   <% end %>
 
+   <div class="form-group">
+    <%= f.label :overtime_request, class: "col-sm-12" %>
+    <%= f.text_field :overtime_request, class: "form-control" %>
+  </div>
+
   <div class="form-group">
     <%= f.label :date, class: "col-sm-12" %>
     <%= f.date_field :date, class: "form-control" %>
