--- a/app/views/static/_admin.html.erb
+++ b/app/views/static/_admin.html.erb
@@ -1,1 +1,29 @@
-<h1>Hi Admin</h1>
+<div class='container-fluid'>
+  <div class='pending-homepage row'>
+    <div class='homepage-block col-md-3'>
+     <p>ashkas</p> 
+    </div>
+
+    <div class='homepage-block col-md-3'>
+     <p>ashkas</p> 
+    </div>
+
+    <div class='homepage-block col-md-3'>
+     <p>ashkas</p> 
+    </div>
+
+    <div class='homepage-block col-md-3'>
+     <p>ashkas</p> 
+    </div>
+
+    <div class='homepage-block col-md-3'>
+     <p>ashkas</p> 
+    </div>  
+  </div>
+
+  <div class='pending-homepage'>
+    <div>
+      <p>safsfa</p>
+    </div>
+  </div>
+</div>
