--- a/app/assets/stylesheets/admin_homepage.css
+++ b/app/assets/stylesheets/admin_homepage.css
@@ -11,9 +11,13 @@
 .homepage-block {
   background-color: #1D3C91;
   color: white;
-  margin: 15px;
+  margin: 12px 45px 12px 45px;
   padding:  15px;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
+}
+
+.pending_details {
+  font-weight: 900;
 }
