--- a/app/views/static/_employee.html.erb
+++ b/app/views/static/_employee.html.erb
@@ -1,6 +1,5 @@
 <div class='container-fluid'>
   <div class='row'>
-
     <% if @pending_audit_confirmations.count > 0 %>
       <div class='pending-homepage employee-blocks'>
         <h3>Pending Your Confirmation</h3>
@@ -12,7 +11,7 @@
     <div class='pending-homepage employee-blocks'>
       <h3>Request Overtime</h3>
 
-      <%= link_to "Request Overtime Approval", new_post_path, class: 'btn btn-primary btn-block btnlg' %>
+      <%= link_to "Request Overtime Approval", new_post_path, class: 'btn btn-primary btn-block btn-lg' %>
     </div>
   </div>
 </div>
