--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -12,7 +12,7 @@
       <%= link_to "Time Entries", posts_path %>
     </li>
 
-    <!-- TODO possible refactor -->
+    <!-- TODO: possibly refactor -->
     <%= render 'shared/audit_log_tab' if policy(AuditLog).index? %>
 
     <li class="<%= active?(new_post_path) %>">
@@ -21,7 +21,7 @@
     <li class="dropdown pull-right">
        <a href="#" data-toggle="dropdown" class="dropdown-toggle">Options<strong class="caret"></strong></a>
       <ul class="dropdown-menu">
-
+        
         <!-- TODO -->
         <% if current_user.try(:type) == 'AdminUser' %>
         <li>
@@ -38,4 +38,3 @@
     </li>
   </ul>
 <% end %>
-<!-- TODO -->
