Added first name last name to text notification file

--- a/app/views/manager_mailer/email.text.erb
+++ b/app/views/manager_mailer/email.text.erb
@@ -1,4 +1,4 @@
-Hi <%= @manager.full_name %>,
+Hi <%= @manager.first_name + " " + @manager.last_name %>,
 
 There are new overtime request for you to review. Please click the link to access them.
 
