--- a/app/views/shared/_audit_log_tab.html.erb
+++ b/app/views/shared/_audit_log_tab.html.erb
@@ -1,3 +1,3 @@
-<li class="<%= active?(new_post_path) %>">
-  <%= link_to "Audit Log", audit_logs_path%>
+<li class="<%= active?(audit_logs_path) %>">
+  <%= link_to "Audit Log", audit_logs_path %>
 </li>
