--- a/app/views/static/_pending_approval.html.erb
+++ b/app/views/static/_pending_approval.html.erb
@@ -5,7 +5,7 @@
     </h4> 
 
     <p>
-     <span class='pending_details'>Date Submitted:</span> <%= pending_approval.user.full_name %>
+     <span class='pending_details'>Date Submitted:</span> <%= pending_approval.date %>
     </p>
 
     <p>
